GUTTA ER I SYNC

--- a/code/Exercise3.ipynb
+++ b/code/Exercise3.ipynb
@@ -39,8 +39,8 @@
     "from sklearn import linear_model\n",
     "\n",
     "\n",
-    "#generate some data: \n",
-    "np.random.seed(SEED_VALUE)\n",
+    "#generate some data:\n",
+    "SEED_VALUE = np.random.seed(4155)\n",
     "n = 22\n",
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
@@ -48,7 +48,7 @@
     "t = FrankeFunction(x, y) + noise_factor(n, factor=0.3)\n",
     "ndegrees = 14\n",
     "\n",
-    "boot_strp_MSE_test, _, _, boot_strp_variance = bootstrap(x, y, t, ndegrees, n - int(n/5), OLS())\n",
+    "boot_strp_MSE_test, _, _, boot_strp_variance = bootstrap(x, y, t, ndegrees, n - int(n/5), OLS(), SEED_VALUE)\n",
     "boot_strp_std = np.sqrt(boot_strp_variance)\n",
     "\n",
     "\n",
@@ -102,7 +102,7 @@
     "\n",
     "\n",
     "#generate some data: \n",
-    "np.random.seed(SEED_VALUE)\n",
+    "SEED_VALUE = np.random.seed(4155)\n",
     "n = 10\n",
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
@@ -157,7 +157,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.8.8",
+   "version": "3.9.7",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -169,10 +169,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+   "display_name": "Python 3.9.7 64-bit"
   },
   "interpreter": {
-   "hash": "dca0ade3e726a953b501b15e8e990130d2b7799f14cfd9f4271676035ebe5511"
+   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
   }
  },
  "nbformat": 4,
