--- a/main.tex
+++ b/main.tex
@@ -518,7 +518,7 @@ Due to the complexity in the terrain data, we expected models of relativly high 
 
 \begin{figure}
   \centering
-  \subfloat{{\includegraphics[width=7cm]{figures/EX6_Terrain1s patches.pdf} }}%
+  \subfloat{{\includegraphics[width=7cm]{figures/EX6_Terrain1 patches.pdf} }}%
   \subfloat{{\includegraphics[width=7cm]{figures/EX6_Terrain2 patches.pdf} }}%
   \caption{Terrain patches}%
   \label{fig:terrain_patches}%
