--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -106,8 +106,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "np.random.seed(4155)\n",
-    "n = 20 # The number of points in direction for the Franke Function\n",
+    "SEED_VALUE = np.random.seed(4155)\n",
+    "n = 100 # The number of points in direction for the Franke Function\n",
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
     "x, y = np.meshgrid(x,y)\n",
@@ -139,10 +139,11 @@
     "# Must evalute model using MSE from traning and test\n",
     "for degree in range(1, degrees + 1):\n",
     "    X = create_X(x, y, degree) # Design MatrixS\n",
+    "    X_train, X_test, z_train, z_test = prepare_data(X, z.ravel(), SEED_VALUE, scale_X=True, skip_intercept=True)\n",
     "    model = OLS() # The model\n",
     "    #model.fit(X, z) # Fitting the model\n",
-    "    model.fit(X, z.ravel()) # Fitting the model\n",
-    "    z_hat = model.predict(X) # predict on train data\n",
+    "    z_hat_train = model.fit(X_train, z_train) # Fitting the model\n",
+    "    z_hat = model.predict(X[:,1:]) # predict on train data\n",
     "    \n",
     "    # Plot\n",
     "    ax = fig.add_subplot(3,2, degree, projection='3d')\n",
@@ -189,6 +190,21 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "SEED_VALUE = np.random.seed(4155)\n",
+    "n = 20 # The number of points in direction for the Franke Function\n",
+    "x = np.sort(np.random.uniform(0, 1, n))\n",
+    "y = np.sort(np.random.uniform(0, 1, n))\n",
+    "x, y = np.meshgrid(x,y)\n",
+    "noise = 0.05\n",
+    "z = FrankeFunction(x, y) + noise_factor(n,factor=noise)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
     "degrees = 5\n",
     "\n",
     "# Setting up dataframes for the observed values\n",
@@ -214,17 +230,17 @@
     "    \n",
     "    # Scaling data and splitting it into training and test sets\n",
     "    #X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X=False, scale_t=False)\n",
-    "    X_train, X_test, z_train, z_test = prepare_data(X, z.ravel(), test_size=0.2, shuffle=True, scale_X=True, scale_t=False, skip_intercept=True, random_state=4155)\n",
+    "    X_train, X_test, z_train, z_test = prepare_data(X, z.ravel(), test_size=0.2, shuffle=True, scale_X=True, scale_t=False, skip_intercept=True, random_state=SEED_VALUE)\n",
     "    \n",
     "    # Model construction, fitting, and predictions using matrix inversion\n",
     "    model = OLS() # The model\n",
-    "    z_hat_train = model.fit(X_train, z_train, SVDfit = False) # Fitting the model and predict on training data\n",
+    "    z_hat_train = model.fit(X_train, z_train) # Fitting the model and predict on training data\n",
     "    z_hat_test = model.predict(X_test) # predict on test data\n",
     "\n",
     "    # Model construction, fitting and predictions using SVD inversion\n",
-    "    model_svd = OLS()\n",
-    "    z_hat_train_svd = model_svd.fit(X_train, z_train)\n",
-    "    z_hat_test_svd = model.predict(X_test)\n",
+    "    #model_svd = OLS()\n",
+    "    #z_hat_train_svd = model_svd.fit(X_train, z_train)\n",
+    "    #z_hat_test_svd = model.predict(X_test)\n",
     "\n",
     "    # Model construction, fitting and predictions using sklearn\n",
     "    model_sk = lm.LinearRegression(fit_intercept=False)\n",
@@ -238,10 +254,10 @@
     "    MSE_score_test = MSE(z_test, z_hat_test)\n",
     "    R2_score_test = R2(z_test, z_hat_test)\n",
     "\n",
-    "    MSE_score_train_svd = MSE(z_train, z_hat_train_svd)\n",
-    "    R2_score_train_svd = R2(z_train, z_hat_train_svd)\n",
-    "    MSE_score_test_svd = MSE(z_test, z_hat_test_svd)\n",
-    "    R2_score_test_svd = R2(z_test, z_hat_test_svd)\n",
+    "    # MSE_score_train_svd = MSE(z_train, z_hat_train_svd)\n",
+    "    # R2_score_train_svd = R2(z_train, z_hat_train_svd)\n",
+    "    # MSE_score_test_svd = MSE(z_test, z_hat_test_svd)\n",
+    "    # R2_score_test_svd = R2(z_test, z_hat_test_svd)\n",
     "\n",
     "    MSE_score_train_sk = MSE(z_train, z_hat_train_sk)\n",
     "    R2_score_train_sk = R2(z_train, z_hat_train_sk)\n",
@@ -250,7 +266,7 @@
     "    \n",
     "    # Estimated standard error for the beta coefficients\n",
     "    SE_betas = model.SE\n",
-    "    SE_betas_svd = model_svd.SE\n",
+    "    #SE_betas_svd = model_svd.SE\n",
     "\n",
     "    #N, P = X_train.shape\n",
     "    #var_hat = (1/(N-P-1)) * np.sum((z_train - z_hat_train)**2)\n",
@@ -305,8 +321,8 @@
     "    z_test_OLS[degree] = z_test.flatten()\n",
     "    z_hat_test_OLS[degree] = z_hat_test.flatten()\n",
     "\n",
-    "    z_hat_train_SVD[degree] = z_hat_train_svd.flatten()\n",
-    "    z_hat_test_SVD[degree] = z_hat_test_svd.flatten()\n",
+    "    #z_hat_train_SVD[degree] = z_hat_train_svd.flatten()\n",
+    "    #z_hat_test_SVD[degree] = z_hat_test_svd.flatten()\n",
     "\n",
     "    z_hat_train_SK[degree] = z_hat_train_sk.flatten()\n",
     "    z_hat_test_SK[degree] = z_hat_test_sk.flatten()\n",
@@ -343,7 +359,7 @@
     "plt.plot(np.arange(1,degrees+1), mse_scores_test_sk, \"y--\", label=\"Test data sklearn\")\n",
     "plt.xlabel(\"Model complexity / Polynomial Degree\")\n",
     "plt.ylabel(\"Prediction Error - MSE\")\n",
-    "plt.title(\"Training evaluation on OLS regression fit\")\n",
+    "plt.title(f\"Training evaluation on OLS regression fit\\n(noise factor {noise})\")\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
@@ -375,6 +391,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "\"\"\"\n",
     "optimal_degree = 5\n",
     "X = create_X(x, y, optimal_degree) # Design Matrix\n",
     "model = OLS() # The model\n",
@@ -390,7 +407,8 @@
     "ax.set_xlabel(\"x\"); ax.set_ylabel(\"y\"); ax.set_zlabel(\"z\")\n",
     "ax.scatter3D(y, x, z_hat, c=z_hat ,marker = '.', cmap=cm.coolwarm)\n",
     "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_best_fit.pdf\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\"\"\""
    ],
    "outputs": [],
    "metadata": {}
@@ -406,18 +424,26 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "for i in range(1,degree+1):\n",
+    "    degree_coeffs = coeffs_df[coeffs_df['degree'] == i]\n",
+    "    display(degree_coeffs)\n",
+    "    fig = plot_beta_errors(degree_coeffs, i)\n",
+    "    fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{i}.pdf\")\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
     "suboptimal_degree_coeffs = coeffs_df[coeffs_df['degree'] == 2]\n",
-    "fig = plot_beta_errors(suboptimal_degree_coeffs, 2)\n",
-    "fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{2}.pdf\")\n",
-    "\n",
-    "optimal_degree_coeffs = coeffs_df[coeffs_df[\"degree\"] == optimal_degree]\n",
-    "display(optimal_degree_coeffs)\n",
-    "optimal_degree_coeffs.to_csv(f\"{REPORT_DATA}{EX1}coeffs_optimal_degree.csv\")\n",
     "\n",
     "\n",
+    "degree_coeffs = coeffs_df[coeffs_df[\"degree\"] == 5]\n",
+    "display(degree_coeffs)\n",
+    "degree_coeffs.to_csv(f\"{REPORT_DATA}{EX1}coeffs_optimal_degree.csv\")\n",
     "\n",
-    "fig = plot_beta_errors(optimal_degree_coeffs, optimal_degree)\n",
-    "fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{optimal_degree}.pdf\")"
+    "\n",
+    "\n",
+    "fig = plot_beta_errors(degree_coeffs, 5)\n",
+    "fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{5}.pdf\")\n",
+    "\"\"\""
    ],
    "outputs": [],
    "metadata": {}
@@ -433,12 +459,14 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "np.random.seed(4155)\n",
-    "n = 100 # The number of points in direction for the Franke Function\n",
+    "SEED_VALUE = np.random.seed(4155)\n",
+    "degrees = 6\n",
+    "n = 20 # The number of points in direction for the Franke Function\n",
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
     "x, y = np.meshgrid(x,y)\n",
-    "z = FrankeFunction(x, y) + noise_factor(n,factor=0.2)"
+    "noise = 0.2\n",
+    "z = FrankeFunction(x, y) + noise_factor(n,factor=noise)"
    ],
    "outputs": [],
    "metadata": {}
@@ -456,12 +484,12 @@
     "z_hat_test_OLS = pd.DataFrame()\n",
     "\n",
     "# Setting up the dataframes for our SVD computed values\n",
-    "z_hat_train_SVD = pd.DataFrame()\n",
-    "z_hat_test_SVD = pd.DataFrame()\n",
+    "#z_hat_train_SVD = pd.DataFrame()\n",
+    "#z_hat_test_SVD = pd.DataFrame()\n",
     "\n",
     "# Setting up dataframes for sklearn computed values\n",
-    "z_hat_train_sk = pd.DataFrame()\n",
-    "z_hat_test_sk = pd.DataFrame()\n",
+    "z_hat_train_SK = pd.DataFrame()\n",
+    "z_hat_test_SK = pd.DataFrame()\n",
     "\n",
     "coeffs_df = pd.DataFrame()\n",
     "\n",
@@ -470,17 +498,17 @@
     "    \n",
     "    # Scaling data and splitting it into training and test sets\n",
     "    #X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X=False, scale_t=False)\n",
-    "    X_train, X_test, z_train, z_test = prepare_data(X, z.ravel(), test_size=0.2, shuffle=True, scale_X=True, skip_intercept=True, random_state=4155)\n",
+    "    X_train, X_test, z_train, z_test = prepare_data(X, z.ravel(), SEED_VALUE, test_size=0.2, shuffle=True, scale_X=True, skip_intercept=True)\n",
     "    \n",
     "    # Model construction, fitting, and predictions using matrix inversion\n",
     "    model = OLS() # The model\n",
-    "    z_hat_train = model.fit(X_train, z_train, SVDfit = False) # Fitting the model and predict on training data\n",
+    "    z_hat_train = model.fit(X_train, z_train) # Fitting the model and predict on training data\n",
     "    z_hat_test = model.predict(X_test) # predict on test data\n",
     "\n",
     "    # Model construction, fitting and predictions using SVD inversion\n",
-    "    model_svd = OLS()\n",
-    "    z_hat_train_svd = model_svd.fit(X_train, z_train)\n",
-    "    z_hat_test_svd = model.predict(X_test)\n",
+    "    # model_svd = OLS()\n",
+    "    # z_hat_train_svd = model_svd.fit(X_train, z_train)\n",
+    "    # z_hat_test_svd = model.predict(X_test)\n",
     "\n",
     "    # Model construction, fitting and predictions using sklearn\n",
     "    model_sk = lm.LinearRegression(fit_intercept=False)\n",
@@ -494,10 +522,10 @@
     "    MSE_score_test = MSE(z_test, z_hat_test)\n",
     "    R2_score_test = R2(z_test, z_hat_test)\n",
     "\n",
-    "    MSE_score_train_svd = MSE(z_train, z_hat_train_svd)\n",
-    "    R2_score_train_svd = R2(z_train, z_hat_train_svd)\n",
-    "    MSE_score_test_svd = MSE(z_test, z_hat_test_svd)\n",
-    "    R2_score_test_svd = R2(z_test, z_hat_test_svd)\n",
+    "    # MSE_score_train_svd = MSE(z_train, z_hat_train_svd)\n",
+    "    # R2_score_train_svd = R2(z_train, z_hat_train_svd)\n",
+    "    # MSE_score_test_svd = MSE(z_test, z_hat_test_svd)\n",
+    "    # R2_score_test_svd = R2(z_test, z_hat_test_svd)\n",
     "\n",
     "    MSE_score_train_sk = MSE(z_train, z_hat_train_sk)\n",
     "    R2_score_train_sk = R2(z_train, z_hat_train_sk)\n",
@@ -506,15 +534,16 @@
     "    \n",
     "    # Estimated standard error for the beta coefficients\n",
     "    SE_betas = model.SE\n",
-    "    SE_betas_svd = model_svd.SE\n",
+    "    #SE_betas_svd = model_svd.SE\n",
     "\n",
     "    #N, P = X_train.shape\n",
     "    #var_hat = (1/(N-P-1)) * np.sum((z_train - z_hat_train)**2)\n",
-    "    var_hat = (1/X_train.shape[0]) * np.sum((z_train - z_hat_train)**2) # Estimated variance\n",
+    "    # var_hat = (1/X_train.shape[0]) * np.sum((z_train - z_hat_train)**2) # Estimated variance\n",
     "    #invXTX_diag = np.diag(np.linalg.inv(X_train.T @ X_train)) \n",
     "    #SE_betas = np.sqrt(var_hat * invXTX_diag) # Standard Error\n",
     "\n",
     "    # Calculating 95% confidence intervall OLS, SVD\n",
+    "    \"\"\"\n",
     "    betas = model.get_all_betas\n",
     "    CI_lower_all_betas = betas - (1.96 * SE_betas)\n",
     "    CI_upper_all_betas = betas + (1.96 * SE_betas)\n",
@@ -526,6 +555,7 @@
     "\n",
     "        \n",
     "    # Printing results\n",
+    "    \n",
     "    print(f\"Degree: {degree}\")\n",
     "    print(f\"Train data - Mean Square Error: {MSE_score_train}\")\n",
     "    print(f\"Train data - R2 score: {R2_score_train}\")\n",
@@ -546,29 +576,35 @@
     "                                 \"CI_upper\":np.round(CI_upper_all_betas, decimals=4)},\n",
     "                                 orient='index').T\n",
     "    coeffs_df = pd.concat([coeffs_df,df], axis=0)\n",
+    "    \"\"\"\n",
     "        \n",
     "    # Filling up dataframes for train and test evaluation\n",
     "    z_train_OLS[degree] = z_train.flatten() \n",
     "    z_hat_train_OLS[degree] = z_hat_train.flatten()\n",
     "    z_test_OLS[degree] = z_test.flatten()\n",
     "    z_hat_test_OLS[degree] = z_hat_test.flatten()\n",
+    "    z_hat_train_SK[degree] = z_hat_train_sk.flatten()\n",
+    "    z_hat_test_SK[degree] = z_hat_test_sk.flatten()\n",
     "\n",
-    "    z_hat_train_SVD[degree] = z_hat_train_svd.flatten()\n",
-    "    z_hat_test_SVD[degree] = z_hat_test_svd.flatten()\n",
+    "    #z_hat_train_SVD[degree] = z_hat_train_svd.flatten()\n",
+    "    #z_hat_test_SVD[degree] = z_hat_test_svd.flatten()\n",
     "\n",
     "\n",
     "# MSE calculations for all lambda values\n",
     "mse_scores_train = ((z_train_OLS - z_hat_train_OLS) ** 2).mean()\n",
     "mse_scores_test = ((z_test_OLS - z_hat_test_OLS) ** 2).mean()\n",
     "\n",
-    "mse_scores_train_svd = ((z_train_OLS - z_hat_train_SVD) ** 2).mean()\n",
-    "mse_scores_test_svd = ((z_test_OLS - z_hat_test_SVD) ** 2).mean()\n",
+    "#mse_scores_train_svd = ((z_train_OLS - z_hat_train_SVD) ** 2).mean()\n",
+    "#mse_scores_test_svd = ((z_test_OLS - z_hat_test_SVD) ** 2).mean()\n",
     "\n",
     "mse_scores_train_sk = ((z_train_OLS - z_hat_train_SK) ** 2).mean()\n",
     "mse_scores_test_sk = ((z_test_OLS - z_hat_test_SK) ** 2).mean()\n",
     "# R2 calculations for all lambda values\n",
-    "#R2_scores_train = 1 - ((z_train_OLS - z_hat_train_OLS) ** 2).sum() / ((z_train_OLS - z_train_OLS.mean())**2).sum() \n",
-    "#R2_scores_test = 1 - ((z_test_OLS - z_hat_test_OLS) ** 2).sum() / ((z_test_OLS - z_test_OLS.mean())**2).sum()"
+    "R2_scores_train = 1 - ((z_train_OLS - z_hat_train_OLS) ** 2).sum() / ((z_train_OLS - z_train_OLS.mean())**2).sum() \n",
+    "R2_scores_test = 1 - ((z_test_OLS - z_hat_test_OLS) ** 2).sum() / ((z_test_OLS - z_test_OLS.mean())**2).sum()\n",
+    "\n",
+    "Morten_r2_train = R2(z_train_OLS, z_hat_train_OLS)\n",
+    "Morten_r2_test = R2(z_test_OLS, z_hat_test_OLS)"
    ],
    "outputs": [],
    "metadata": {}
@@ -587,11 +623,30 @@
     "plt.plot(np.arange(1,degrees+1), mse_scores_test_sk, \"y--\", label=\"Test data sklearn\")\n",
     "plt.xlabel(\"Model complexity / Polynomial Degree\")\n",
     "plt.ylabel(\"Prediction Error - MSE\")\n",
-    "plt.title(\"Training evaluation on OLS regression fit given scaled data w.o. intercept\")\n",
+    "plt.title(f\"Training evaluation on OLS regression fit\\n(noise factor {noise})\")\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
     "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_evaluate_fit_dn.pdf\")\n",
+    "plt.show()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "plt.figure(figsize=(12,8))\n",
+    "plt.plot(np.arange(1,degrees+1), R2_scores_test, \"r--\", label=\"Test data\")\n",
+    "plt.plot(np.arange(1,degrees+1), R2_scores_train, \"y--\", label=\"Training data\")\n",
+    "plt.xlabel(\"Model complexity / Polynomial Degree\")\n",
+    "plt.ylabel(\"R2 score\")\n",
+    "plt.title(f\"R2 evaluation on OLS regression fit\\n(noise factor {noise})\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_R2.pdf\")\n",
     "plt.show()"
    ],
    "outputs": [],
@@ -606,41 +661,6 @@
     "optimal_degree_coeffs.to_csv(f\"{REPORT_DATA}{EX1}coeffs_optimal_degree_dn.csv\")\n",
     "fig = plot_beta_errors(optimal_degree_coeffs, 5)\n",
     "fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{5}_dn.pdf\")"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# test of summary functnion\r\n"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "optimal_degree = 2\n",
-    "X = create_X(x, y, optimal_degree) # Design Matrix\n",
-    "model = OLS(optimal_degree) # The model\n",
-    "z_hat_train = model.fit(X, z.ravel()) # Fitting the model & predict on train data\n",
-    "summary = model.summary()\n",
-    "display(summary)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "optimal_lambda = -1\n",
-    "X = create_X(x, y, 3) # Design Matrix\n",
-    "model = RidgeRegression(optimal_lambda) # The model\n",
-    "z_hat_train = model.fit(X, z.ravel()) # Fitting the model & predict on train data\n",
-    "summary = model.summary()\n",
-    "display(summary)"
    ],
    "outputs": [],
    "metadata": {}
