--- a/code/Exercise4.ipynb
+++ b/code/Exercise4.ipynb
@@ -56,7 +56,7 @@
    "execution_count": null,
    "source": [
     "#generate some data:\n",
-    "np.random.seed(SEED_VALUE)\n",
+    "np.random.seed(4155)\n",
     "n = 20\n",
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
@@ -89,7 +89,7 @@
     "\n",
     "        X = create_X(x,y,n=deg)\n",
     "\n",
-    "        X_train, X_test, z_train, z_test = prepare_data(X, t.ravel(), scale_X=True, skip_intercept=True)\n",
+    "        X_train, X_test, z_train, z_test = prepare_data(X, t.ravel(), 4155, scale_X=True, skip_intercept=True)\n",
     "\n",
     "        model = RidgeRegression(lambdas[lmb])\n",
     "        z_hat_train = model.fit(X_train, z_train)\n",
@@ -125,7 +125,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "%matplotlib\n",
+    "#%matplotlib\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "ax.title.set_text(\"Plot of the Search Landscape\")\n",
@@ -136,6 +136,7 @@
     "print(lambs.shape)\n",
     "print(test_mse.shape)\n",
     "surf = ax.plot_surface(degs, lambs, test_mse.swapaxes(0,1), cmap=cm.coolwarm)\n",
+    "ax.view_init(elev=14., azim=-58.)\n",
     "ax.scatter(5, 0, best_mse, c='y', marker='*', s=2000)"
    ],
    "outputs": [],
@@ -153,16 +154,16 @@
    "execution_count": null,
    "source": [
     "summaries_df = pd.DataFrame()\n",
-    "\n",
+    "optimal_deg = 4\n",
     "for lmb in lambdas:\n",
-    "    X = create_X(x,y,n=4)\n",
-    "    X_train, X_test, z_train, z_test = prepare_data(X, t.ravel(), scale_X=True, skip_intercept=True)\n",
+    "    X = create_X(x,y,n=optimal_deg)\n",
+    "    X_train, X_test, z_train, z_test = prepare_data(X, t.ravel(), 4155, scale_X=True, skip_intercept=True)\n",
     "    model = RidgeRegression(lmb)\n",
     "    model.fit(X_train, z_train)\n",
     "    summary_df = model.summary()\n",
     "    summaries_df = pd.concat([summaries_df, summary_df], axis=0)\n",
     "\n",
-    "fig = plot_beta_errors_for_lambdas(summaries_df, 4)"
+    "fig = plot_beta_errors_for_lambdas(summaries_df, optimal_deg)"
    ],
    "outputs": [],
    "metadata": {}
