--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -428,22 +428,8 @@
     "    degree_coeffs = coeffs_df[coeffs_df['degree'] == i]\n",
     "    display(degree_coeffs)\n",
     "    fig = plot_beta_errors(degree_coeffs, i)\n",
-    "    fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{i}.pdf\")\n",
-    "\n",
-    "\n",
-    "\"\"\"\n",
-    "suboptimal_degree_coeffs = coeffs_df[coeffs_df['degree'] == 2]\n",
-    "\n",
-    "\n",
-    "degree_coeffs = coeffs_df[coeffs_df[\"degree\"] == 5]\n",
-    "display(degree_coeffs)\n",
-    "degree_coeffs.to_csv(f\"{REPORT_DATA}{EX1}coeffs_optimal_degree.csv\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "fig = plot_beta_errors(degree_coeffs, 5)\n",
-    "fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{5}.pdf\")\n",
-    "\"\"\""
+    "    plt.title(f\"Beta error OLS - degree{degree}\\n(noise factor {noise})\")\n",
+    "    fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{i}.pdf\")"
    ],
    "outputs": [],
    "metadata": {}
@@ -451,7 +437,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Repeat of the previous exercise, this time with double the amount of added noise. (0.05 -> 0.1)"
+    "Repeat of the previous exercise, this time with foure times the amount of added noise. (0.05 -> 0.2)"
    ],
    "metadata": {}
   },
@@ -460,7 +446,7 @@
    "execution_count": null,
    "source": [
     "SEED_VALUE = np.random.seed(4155)\n",
-    "degrees = 6\n",
+    "degrees = 5\n",
     "n = 20 # The number of points in direction for the Franke Function\n",
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
@@ -543,7 +529,7 @@
     "    #SE_betas = np.sqrt(var_hat * invXTX_diag) # Standard Error\n",
     "\n",
     "    # Calculating 95% confidence intervall OLS, SVD\n",
-    "    \"\"\"\n",
+    "    \n",
     "    betas = model.get_all_betas\n",
     "    CI_lower_all_betas = betas - (1.96 * SE_betas)\n",
     "    CI_upper_all_betas = betas + (1.96 * SE_betas)\n",
@@ -555,7 +541,7 @@
     "\n",
     "        \n",
     "    # Printing results\n",
-    "    \n",
+    "    \"\"\"\n",
     "    print(f\"Degree: {degree}\")\n",
     "    print(f\"Train data - Mean Square Error: {MSE_score_train}\")\n",
     "    print(f\"Train data - R2 score: {R2_score_train}\")\n",
@@ -565,7 +551,7 @@
     "    print(f\"Beta - values{betas}\")\n",
     "    print(f\"Beta - Std Errors: {SE_betas}\")\n",
     "    print(f\"Beta - Confidence Interval (CI):\\n{CL}\\n\")\n",
-    "\n",
+    "    \"\"\"\n",
     "    # Constructing dataframe for beta coefficients\n",
     "    degs = np.zeros(betas.shape[0]); degs.fill(degree)\n",
     "    df = pd.DataFrame.from_dict({\"degree\" :degs,\n",
@@ -576,7 +562,7 @@
     "                                 \"CI_upper\":np.round(CI_upper_all_betas, decimals=4)},\n",
     "                                 orient='index').T\n",
     "    coeffs_df = pd.concat([coeffs_df,df], axis=0)\n",
-    "    \"\"\"\n",
+    "    \n",
     "        \n",
     "    # Filling up dataframes for train and test evaluation\n",
     "    z_train_OLS[degree] = z_train.flatten() \n",
@@ -656,11 +642,12 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "optimal_degree_coeffs = coeffs_df[coeffs_df[\"degree\"] == 5]\n",
-    "display(optimal_degree_coeffs)\n",
-    "optimal_degree_coeffs.to_csv(f\"{REPORT_DATA}{EX1}coeffs_optimal_degree_dn.csv\")\n",
-    "fig = plot_beta_errors(optimal_degree_coeffs, 5)\n",
-    "fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{5}_dn.pdf\")"
+    "for i in range(1,degree+1):\n",
+    "    degree_coeffs = coeffs_df[coeffs_df['degree'] == i]\n",
+    "    display(degree_coeffs)\n",
+    "    fig = plot_beta_errors(degree_coeffs, i)\n",
+    "    plt.title(f\"Beta error OLS - degree{degree}\\n(noise factor {noise})\")\n",
+    "    fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{i}_mn.pdf\")"
    ],
    "outputs": [],
    "metadata": {}
