--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -13,6 +13,7 @@
     "import pandas as pd\n",
     "#from mpl_toolkits.mplot3d import Axes3D\n",
     "import sklearn.linear_model as lm\n",
+    "#\n",
     "\n",
     "print(f\"Root directory: {os.getcwd()}\")\n",
     "\n",
@@ -669,7 +670,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.7 64-bit"
+   "display_name": "Python 3.7.11 64-bit ('fysstk_env': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -681,10 +682,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.11"
   },
   "interpreter": {
-   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   "hash": "9c543d25d076d866156e6f2c445c66d614286218a5e81464998dcfdeffc50581"
   }
  },
  "nbformat": 4,
