--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -3,6 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -22,31 +24,31 @@
     "    \"font.serif\": [\"Palatino\"],\n",
     "    \"font.size\": 10,\n",
     "})"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Global variables "
-   ],
    "metadata": {
     "tags": []
-   }
+   },
+   "source": [
+    "### Global variables "
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#  Franke function 3D preview\r\n",
-    "First we plot a 3D plot of the franke function.\r\n",
+    "#  Franke function 3D preview\n",
+    "First we plot a 3D plot of the franke function.\n",
     "The plot is based on the provided code in the assignmentext for plotting the franke function "
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Preview plot of the franke function\n",
     "#%matplotlib\n",
@@ -83,28 +85,28 @@
     "ax2.zaxis.set_major_formatter(FormatStrFormatter('%.02f'))\n",
     "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_noise_preview.pdf\")\n",
     "plt.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 1 - Ordinary Least Squeares (OLS)"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## 1.1 Data\r\n",
-    "Defining and creating the data\r\n"
-   ],
-   "metadata": {}
+    "## 1.1 Data\n",
+    "Defining and creating the data\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "SEED_VALUE = np.random.seed(4155)\n",
     "n = 100 # The number of points in direction for the Franke Function\n",
@@ -112,21 +114,21 @@
     "y = np.sort(np.random.uniform(0, 1, n))\n",
     "x, y = np.meshgrid(x,y)\n",
     "z = FrankeFunction(x, y) + noise_factor(n,factor=0.2)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## 1.2 Plot of fit for all degrees before evaluation\r\n",
+    "## 1.2 Plot of fit for all degrees before evaluation\n",
     " We plot the fit up to degree 6 to get an intuition on the curvature of the fitted models"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(8,8))\n",
     "degrees = 6\n",
@@ -155,40 +157,40 @@
     "plt.tight_layout()\n",
     "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_fit.pdf\")\n",
     "plt.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## 1.3 - Finding degree/model complexity for the optimal OLS fit\r\n",
-    "Approximate the franke function using ordinary least squares\r\n",
+    "## 1.3 - Finding degree/model complexity for the optimal OLS fit\n",
+    "Approximate the franke function using ordinary least squares\n",
     "We estimate the franke functinon using polynomials up to 6th degree. We than look at the MSE scores to look for overfitting. We use the MSE score values from the test data to determine overfit together with the curvature of the evaluation plot"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "### Confidence intervall \r\n",
-    "$$CI_{0.95}(\\hat\\beta_i) = [\\hat\\beta_i-1.96 SE(\\hat\\beta_i), \\hat\\beta_i+1.96 SE(\\hat\\beta_i)] =\\hat\\beta_i \\pm 1.96\\hat \\sigma(\\hat\\beta_i)$$ \r\n",
-    "In order to estimate the variance of the $i$-th beta values: $$\\sigma^2 (\\beta_i ) = \\sigma^2 [(X^{T} X)^{-1}]_{ii}$$\r\n",
-    "However, $\\sigma$ is unkown and can be generaly estimated as followed:\r\n",
-    "$$\\hat\\sigma^2 = \\frac{\\sum_{i=0}^{N-1}(y_i - \\hat y_i)^2}{N}$$\r\n",
-    "For simplification purposes, we N instead of N-p-1 in the denominator.<br>\r\n",
-    "To get the variance estimate of each $\\beta$ component one must calculate the variance with respect to the diagonal elements of $(X^TX)^{-1}$ Estimated standard error is the square root of $\\hat\\sigma^2$, where the estimate for variance $\\hat\\sigma^2$ is:\r\n",
-    "$$\\hat\\sigma^2 = \\frac{\\sum_{i=0}^{N-1}(y_i - \\hat y_i)^2}{N}(X^TX)^{-1}$$\r\n",
-    "Where y is the true value, and $\\hat y$ being the predicted value. <br>\r\n",
-    "The variance estimate of each $\\hat\\beta$ estimate can be written as:\r\n",
-    "$$\\hat\\sigma_{\\hat\\beta_i}^2 = \\hat\\sigma^2(X^TX)_{i,i}^{-1}$$\r\n",
-    "\r\n"
-   ],
-   "metadata": {}
+    "### Confidence intervall \n",
+    "$$CI_{0.95}(\\hat\\beta_i) = [\\hat\\beta_i-1.96 SE(\\hat\\beta_i), \\hat\\beta_i+1.96 SE(\\hat\\beta_i)] =\\hat\\beta_i \\pm 1.96\\hat \\sigma(\\hat\\beta_i)$$ \n",
+    "In order to estimate the variance of the $i$-th beta values: $$\\sigma^2 (\\beta_i ) = \\sigma^2 [(X^{T} X)^{-1}]_{ii}$$\n",
+    "However, $\\sigma$ is unkown and can be generaly estimated as followed:\n",
+    "$$\\hat\\sigma^2 = \\frac{\\sum_{i=0}^{N-1}(y_i - \\hat y_i)^2}{N}$$\n",
+    "For simplification purposes, we N instead of N-p-1 in the denominator.<br>\n",
+    "To get the variance estimate of each $\\beta$ component one must calculate the variance with respect to the diagonal elements of $(X^TX)^{-1}$ Estimated standard error is the square root of $\\hat\\sigma^2$, where the estimate for variance $\\hat\\sigma^2$ is:\n",
+    "$$\\hat\\sigma^2 = \\frac{\\sum_{i=0}^{N-1}(y_i - \\hat y_i)^2}{N}(X^TX)^{-1}$$\n",
+    "Where y is the true value, and $\\hat y$ being the predicted value. <br>\n",
+    "The variance estimate of each $\\hat\\beta$ estimate can be written as:\n",
+    "$$\\hat\\sigma_{\\hat\\beta_i}^2 = \\hat\\sigma^2(X^TX)_{i,i}^{-1}$$\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "SEED_VALUE = np.random.seed(4155)\n",
     "n = 20 # The number of points in direction for the Franke Function\n",
@@ -197,13 +199,13 @@
     "x, y = np.meshgrid(x,y)\n",
     "noise = 0.05\n",
     "z = FrankeFunction(x, y) + noise_factor(n,factor=noise)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "degrees = 5\n",
     "\n",
@@ -341,13 +343,13 @@
     "# R2 calculations for all lambda values\n",
     "R2_scores_train = 1 - ((z_train_OLS - z_hat_train_OLS) ** 2).sum() / ((z_train_OLS - z_train_OLS.mean())**2).sum() \n",
     "R2_scores_test = 1 - ((z_test_OLS - z_hat_test_OLS) ** 2).sum() / ((z_test_OLS - z_test_OLS.mean())**2).sum()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Plots\n",
     "plt.figure(figsize=(12,8))\n",
@@ -365,31 +367,31 @@
     "plt.tight_layout()\n",
     "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_evaluate_fit_1.pdf\")\n",
     "plt.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## 1.4 Analysis of plots and training metrics\r\n",
-    "Do the analysis.......\r\n",
-    "\r\n",
-    "Conclusion:<br>\r\n",
+    "## 1.4 Analysis of plots and training metrics\n",
+    "Do the analysis.......\n",
+    "\n",
+    "Conclusion:<br>\n",
     "Based on the analysis, we conclude that a model complexity of degree 5 yields the most optimal fit."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 1.5 plot of the model using the most optimal parameters"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "optimal_degree = 5\n",
@@ -409,20 +411,20 @@
     "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_best_fit.pdf\")\n",
     "plt.show()\n",
     "\"\"\""
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Looking at $\\beta$ values"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in range(1,degree+1):\n",
     "    degree_coeffs = coeffs_df[coeffs_df['degree'] == i]\n",
@@ -430,20 +432,20 @@
     "    fig = plot_beta_errors(degree_coeffs, i)\n",
     "    plt.title(f\"Beta error OLS - degree{degree}\\n(noise factor {noise})\")\n",
     "    fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{i}.pdf\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Repeat of the previous exercise, this time with foure times the amount of added noise. (0.05 -> 0.2)"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "SEED_VALUE = np.random.seed(4155)\n",
     "degrees = 5\n",
@@ -453,13 +455,13 @@
     "x, y = np.meshgrid(x,y)\n",
     "noise = 0.2\n",
     "z = FrankeFunction(x, y) + noise_factor(n,factor=noise)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Setting up dataframes for the observed values\n",
     "z_train_OLS = pd.DataFrame()\n",
@@ -591,13 +593,13 @@
     "\n",
     "Morten_r2_train = R2(z_train_OLS, z_hat_train_OLS)\n",
     "Morten_r2_test = R2(z_test_OLS, z_hat_test_OLS)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Plots\n",
     "plt.figure(figsize=(12,8))\n",
@@ -615,13 +617,13 @@
     "plt.tight_layout()\n",
     "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_evaluate_fit_dn.pdf\")\n",
     "plt.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "plt.figure(figsize=(12,8))\n",
     "plt.plot(np.arange(1,degrees+1), R2_scores_test, \"r--\", label=\"Test data\")\n",
@@ -634,13 +636,13 @@
     "plt.tight_layout()\n",
     "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_R2.pdf\")\n",
     "plt.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in range(1,degree+1):\n",
     "    degree_coeffs = coeffs_df[coeffs_df['degree'] == i]\n",
@@ -648,15 +650,16 @@
     "    fig = plot_beta_errors(degree_coeffs, i)\n",
     "    plt.title(f\"Beta error OLS - degree{degree}\\n(noise factor {noise})\")\n",
     "    fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{i}_mn.pdf\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.7 64-bit"
+   "display_name": "Python 3.9.7 64-bit",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -669,9 +672,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
-  },
-  "interpreter": {
-   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
   }
  },
  "nbformat": 4,
